dropdown menu behind carousel solved on laptops and big screens

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -148,6 +148,7 @@
     display: none
   }
   #menu-button {
+
     border-radius: 20%;
     padding: 15% 0;
 
@@ -359,6 +360,7 @@
     display: none
   }
   #menu-button {
+
     border-radius: 20%;
     padding: 15% 0;
 
@@ -427,7 +429,14 @@
 
 
 @media screen and (max-width: 1440px) and (min-width: 1025px) {
-  
+  #menu-button {
+
+    position: relative;
+    border-radius: 20%;
+    padding: 15% 0;
+
+  }
+
   body {
     padding: 2% 10%;
     background: #BDC3C7;
@@ -464,6 +473,8 @@
     padding: 2% 10% 2% 10%;
     overflow: scroll;
   }
+
+
   .box-img {
     height: 47vh;
     display: block;
@@ -479,9 +490,10 @@
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
-    z-index: 1;
-    margin-top: 220%;
+    z-index: 100;
+    top: 70px;
   }
+
   .dropdown:hover .dropdown-content {
     display: block;
   }
@@ -597,7 +609,6 @@
   #logo {
     margin-left: 17%;
   }
-
 }
 
 
@@ -605,6 +616,14 @@
 
 
 @media screen and (min-width: 1441px) {
+
+  #menu-button {
+
+    position: relative;
+    border-radius: 20%;
+    padding: 15% 0;
+
+  }
 
   body {
     padding: 2% 10%;
@@ -663,8 +682,8 @@
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
-    z-index: 1;
-    margin-top: 220%;
+    z-index: 100;
+    top: 70px;
   }
   .dropdown:hover .dropdown-content {
     display: block;
